BookItSrc/src/app/main/sub-main/explore/explore.component.scss
body{
    background-color: #FAFAFA !important;
    overflow: scroll;
}


//switch categories
.header {
  background-color: #00b1b8; 
  color: #FAFAFA;
  width: 100%;
  border-top: 2px solid #FAFAFA;
  border-radius: 0px 0px 40px 40px;
  
  //border-top: 2px solid #757575;
  //border-bottom: 2px solid #757575;
  flex: auto;
  display: flex;
  position: fixed;
  z-index: 100; 
}
button-switch-page {
  flex: start;
}

label.header-cat {
  flex-grow: 2;
  position: relative;
  right:0%;
  margin-top: 2%;
  
  transform: translate(0%,0%);
}
.arrow-icon{
  height:35px;
}
.request-icon{
  height:35px;
  background-color: #00b1b8;
  border-radius: 5px;
  filter: drop-shadow(rgb(43, 39, 39) 1px 1px 2px);
  box-sizing: border-box;

}
#rightArrowIcon{
  position: relative;
  right:5%;
}
#leftArrowIcon{
  position: relative;
  left:5%;
}
section {
  display: flex;
  align-items: center;
  justify-content: stretch;
}


//book list
.cover{
    position: absolute;
    border-radius: 0px;
    filter: drop-shadow(rgb(43, 39, 39) 1px 1px 2px);
    max-width:97%;
    max-height:97%;
    min-width: 97%;
    min-height: 97%;
    background-color: #ebebeb;
  }
 *{
  touch-action: pan-y !important; 
}
 .mybooks{
    padding-top: 40px;
  }
 
  .fas{
    filter: drop-shadow(0 0 3px rgba(0,0,0,0.7));
  }
  .bookNavbarBox{
    position:fixed;
    bottom:0%;
    color:white;
    background-color: #2f3842;
    //border-bottom: 2px solid #00b1b8;
    //border-left: 4px solid #00b1b8;
    //border-right: 4px solid #00b1b8;
    border-radius:30px 30px 0px 0px ;
    font-size: 32px;
    height: 75%;
    width: 100%;

  }
  // .bookNavbarList{
  //   //margin-top: 5px;
  // }

  .detailCover{
    border-radius: 0px;
    filter: drop-shadow(rgb(43, 39, 39) 1px 1px 2px);
  }
  .detailCoverContainer{
    position: absolute;
    left: 5%;
    height: 160px;
    width:100px;
  }



  .cover.blurred{
    opacity:0.5;
  }
  .cover.regular{
    opacity: 1;
  }
  button{
    border:0;
  }
  .my-books{
    margin-top: 5%;
    margin-left:  5%;
    margin-right: 5%;
  }

  .centered {
    margin: 0%;
    padding: 0%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  .heart {
    //beat
    // margin: 0%;
    // padding: 0%;
    // font-size: 150px;
    // animation: shake 3s infinite alternate;
    // transform-origin: center;
    
    //square
    // /* Start the shake animation and make the animation last for 0.5 seconds */
    // animation: square 2s; 
    // /* When the animation is finished, start again */
    // animation-iteration-count: infinite; 
  
  //bounce
   animation: bounce 0.5s;
   animation-direction: alternate;
   animation-timing-function: cubic-bezier(.5,0.05,1,.5);
   animation-iteration-count: infinite;
  }
  
  /* Heart beat animation */
  @keyframes beat{
    to { transform: scale(1.4); }
  }

  @keyframes square {
    12.5% { transform: translate(50px, 0px) rotate(0deg); }
    37.5% { transform: translate(50px, 100px) rotate(0deg); }
    62.5% { transform: translate(-50px, 100px) rotate(0deg); }
    87.5%  { transform: translate(-50px, 0px) rotate(0deg); }
    100% { transform: translate(0px, 0px) rotate(0deg); }
}
  
@keyframes bounce {
  from { transform: translate3d(0, 0, 0);     }
  to   { transform: translate3d(0, 200px, 0); }
}

/* Prefix Support */
ball {
  -webkit-animation-name: bounce;
  -webkit-animation-duration: 0.5s;
  -webkit-animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(.5,0.05,1,.5);
  -webkit-animation-iteration-count: infinite;
}

@-webkit-keyframes bounce {
  from { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
  to   { -webkit-transform: translate3d(0, 200px, 0); transform: translate3d(0, 200px, 0); }
}

.mat-card-title {
  font-size: 30px;
  font-weight: 400;
  line-height: 1;
}

